[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/UpgradeStation.gd" type="Script" id=1]
[ext_resource path="res://Art/ship.png" type="Texture" id=2]
[ext_resource path="res://Art/Lights/HiRes/Spotlight.png" type="Texture" id=3]



[sub_resource type="RectangleShape2D" id=1]

[node name="UpgradeStation" type="Area2D"]
modulate = Color( 0.411765, 0.411765, 0.411765, 1 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="MenuZ" type="Node2D" parent="."]
z_index = 1
z_as_relative = false

[node name="MenuContainer" type="HBoxContainer" parent="MenuZ"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -140.0
margin_right = 100.0
margin_bottom = -20.0
rect_min_size = Vector2( 200, 120 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -95 )
rotation = 3.14159
scale = Vector2( 3.5, 1.25 )
enabled = false
texture = ExtResource( 3 )
texture_scale = 0.05
energy = 1.2
[connection signal="body_entered" from="." to="." method="_on_UpgradeStation_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_UpgradeStation_body_exited"]
